adicionando colunas de curso e turno nas tabela turma
